# Plutarch-QuickCheck

./: .ghcid  CHANGELOG.md  README.md  flake.nix  study.cabal
app/: Main.hs
src/: Function.hs  Interface.hs  Lib.hs
src/Plutarch/Test/: QuickCheck.hs
src/Plutarch/Test/QuickCheck/: Function.hs  Instances.hs
test/: Main.hs
