cabal-version:      2.4
name:               study
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Seungheon Oh
maintainer:         seungheon.ooh@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-lang
  ghc-options:
  build-depends:
    , base               ^>=4.16
    , plutarch
    , plutus-ledger-api
    , plutus-tx

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeOperators

  build-depends:
    , bytestring
    , containers
    , generics-sop
    , liqwid-plutarch-extra
    , mtl
    , plutarch-extra
    , plutarch-numeric
    , plutarch-quickcheck
    , plutus-core
    , QuickCheck
    , quickcheck-instances
    , tagged
    , tasty
    , tasty-expected-failure
    , tasty-quickcheck
    , text
    , universe

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules: Plutarch.Test.QuickCheck
  other-modules:   Plutarch.Test.QuickCheck.Function
                 , Plutarch.Test.QuickCheck.Instances

  hs-source-dirs:  src

executable study
  import:           common-lang
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base      ^>=4.16.2.0
    , study
    , universe

  hs-source-dirs:   app
  default-language: Haskell2010

-- Tests

test-suite test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:  study
